cmake_minimum_required(VERSION 2.6)

PROJECT(Komodakis)

FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

FIND_PACKAGE(ITK REQUIRED)
INCLUDE(${ITK_USE_FILE})

ADD_EXECUTABLE(Example Example.cxx Komodakis.cxx)
TARGET_LINK_LIBRARIES(Example
vtkHybrid ITKIO)

ADD_EXECUTABLE(Tests Tests.cxx Komodakis.cxx)
TARGET_LINK_LIBRARIES(Tests
vtkHybrid ITKIO)

